# rag-core

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements.txt
configs/: baseline.yaml  extraction_config.yaml
rag_core/: __init__.py
rag_core/chunking/: chunk_optimizer.py  chunk_schemas.py  text_splitter.py
rag_core/embedding/: embedder.py
rag_core/extraction/: document_schemas.py  math_ocr_handler.py  ocr_handler.py  pdf_extractor.py  preprocessor.py
rag_core/generation/: llm_handler.py  prompt_template.py
rag_core/retrieval/: retriever.py
rag_core/utils/: metrics.py
rag_core/vectorstore/: pinecone_handler.py
scripts/: README.md  index.py  query.py  rag.py
src/rag_core/: __init__.py
src/rag_core/chunking/: chunk_optimizer.py
src/rag_core/extraction/: math_ocr_handler.py  ocr_handler.py  preprocessor.py
src/rag_core/generation/: llm_handler.py
src/rag_core/vectorstore/: pinecone_handler.py
tests/: README.md  conftest.py  test_chunk_optimizer.py  test_chunking.py  test_enriched_chunk.py  test_extraction.py  test_integration.py  test_live.py  test_metrics.py  test_preprocessor.py  test_prompt_template.py  test_retrieval.py  test_retriever_methods.py  test_scripts_smoke.py
