[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core"
version = "0.1.0"
description = "pipeline RAG standalone pour NOXA : extraction PDF, OCR, chunking, retrieval, génération"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "Pillow",
    "python-doctr>=0.8.0",
    "langchain>=0.1.0",
    "pinecone>=3.0.0",
    "sentence-transformers>=2.2.0",
    "huggingface-hub>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_core*"]

[tool.pytest.ini_options]
# Par défaut, pytest ne lance QUE les tests sans marqueur (les 140 tests rapides).
# Pour lancer les tests live : pytest -m live
# Pour tout lancer : pytest -m "live or not live"
addopts = "-m 'not live'"
markers = [
    "live: nécessite les clés API du .env (Pinecone et/ou HuggingFace) — lancement explicite uniquement",
]